# shopassist-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  vercel.json
docs/: deployment-public.md
llm_backend/: .env.production.example  main.py
llm_backend/app/core/: config.py  database.py  logger.py
llm_backend/app/harness/: model_registry.py
llm_backend/app/lg_agent/kg_sub_graph/agentic_rag_agents/components/customer_tools/: node.py
llm_backend/app/lg_agent/kg_sub_graph/agentic_rag_agents/components/cypher_tools/: node.py
llm_backend/app/lg_agent/kg_sub_graph/agentic_rag_agents/components/predefined_cypher/: utils.py
llm_backend/app/lg_agent/kg_sub_graph/agentic_rag_agents/components/visualize/generate_chart/: charts.py  node.py
llm_backend/app/services/: conversation_service.py  deepseek_service.py  indexing_service.py  order_lookup_service.py  rag_chat_service.py  redis_semantic_cache.py
